--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,55 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
+}
+
+/*-----------------------------------------------------------------*/
+
+.toggle-button {
+    position: absolute;
+    top: .75rem;
+    right: 1rem;
+    display: none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 25px;
+    height: 20px;
+}
+
+.toggle-button .bar {
+    height: 3px;
+    width: 100%;
+    background-color: black;
+    border-radius: 10px;
 }
 
 header {
-    height: 25vh;
-    width: 100%;
+    max-width: 100%; 
+    height: auto;
     background-image: url();
+    background-color: ;
     background-size: cover;
     background-position: center;
     align-items: center;
     border-bottom: 1px solid rgb(229, 224, 224);
     margin-top: 10px;
+    margin-bottom: 30px;
     padding-top: 10px;
 }
 
+.logo {
+    color: black;
+    font-size: 70px;
+    font-family: 'Tangerine';
+}
+
+
 nav {
     display: flex;
-    align-items: center;
     justify-content: space-between;
+    align-items: center;
+    background: ;
     padding: 10px;
 }
 
@@ -26,27 +57,30 @@ nav ul li {
     list-style-type: none;
     display: inline-block;
     padding: 10px 20px;
-    color: black;
     background-color: white;
     border-radius: 20px;
+    font-weight: bold;
 }
 
 nav ul li a {
     text-decoration: none;
-    font-weight: bold;
     color: black;
 }
 
-nav ul li a:hover {
-    color: #777;
+nav ul li:hover,
+li.active {
+    background-color: lightgoldenrodyellow;
+    opacity: 0.7;
     transition: .3s;
 }
 
-.logo {
-    color: black;
-    font-size: 70px;
-    font-family: 'Tangerine', cursive;
+#srch,
+#search {
+    border: solid 1px lightgoldenrodyellow;
+    height: 20px;
 }
+
+/*-----------------------------------------------------------------*/
 
 span {
     color: red;
@@ -62,35 +96,6 @@ p {
     margin: auto;
 }
 
-H1,
-H2,
-H3,
-H4,
-H5,
-H6 {
-    text-align: center;
-}
-
-H1 {
-    font-size: 30px;
-    text-transform: uppercase;
-    letter-spacing: 1px;
-    margin-top: 20px;
-}
-
-H2 {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    text-decoration: none;
-    text-transform: none;
-    color: black;
-    letter-spacing: 3px;
-}
-
-H3 {
-    font-size: 15px;
-}
-
 a {
     text-decoration: none;
 }
@@ -101,30 +106,50 @@ a {
     margin-top: 50px;
 }
 
-#contact-page {
-    background-color: #fbfafa;
-    font-family: sans-serif;
+.about-page {
+    max-width: 800px;
+    margin: auto;
 }
+
+/*-----------------------------------------------------------------*/
+
+H1 {
+    font-size: 30px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-top: 20px;
+    text-align: center;
+}
+
+H2 {
+    margin-top: 15px;
+    margin-bottom: 15px;
+    text-decoration: none;
+    text-transform: none;
+    color: black;
+    letter-spacing: 3px;
+    text-align: center;
+}
+
+H3 {
+    font-size: 15px;
+    text-align: center;
+}
+
+/*-----------------------------------------------------------------*/
 
 .contact-box {
-    width: 500px;
+    max-width: 500px;
+    margin: auto;
     background-color: #fff;
     box-shadow: 0 0 20px 0 rgb(236, 234, 234);
-    top: 25%;
-    left: 25%;
-    transform: translate (%, %);
-    position: absolute;
-}
-
-form {
-    margin: 35px;
-    position: ;
 }
 
 .input-field {
     width: 400px;
     height: 40px;
     margin-top: 20px;
+    margin-left: 30px;
     padding-left: 10px;
     border: 1px solid #777;
     border-radius: 14px;
@@ -133,7 +158,7 @@ form {
 .textarea-field {
     width: 400px;
     height: 150px;
-    margin-top: 20px;
+    margin: 20px 30px;
     padding-left: 10px;
     border: 1px solid #777;
     border-radius: 14px;
@@ -144,7 +169,7 @@ form {
     border-radius: 10px;
     border: none;
     padding: 5px;
-    margin: 5px;
+    margin: 20px 30px;
     width: 80px;
     color: white;
     font-weight: bold;
@@ -155,21 +180,68 @@ form {
     opacity: 0.7;
 }
 
-.submit-button:active {}
+
+/*-----------------------------------------------------------------*/
 
 .main-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    margin: 30px;
-    height: ;
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 20px;
     row-gap: 20px;
+    margin: 10px;
+}
+
+.column {
+    width: 1fr;
+    background-color: ;
+}
+
+.column a img {
+    max-width: 100%; height: auto
 }
 
 .main-grid H2 {
     color: black;
 }
 
-.column {
-    background-color: lightgoldenrodyellow;
+/*-----------------------------------------------------------------*/
+
+@media (max-width: 800px) {
+    .toggle-button {
+        display: flex;
+    }
+
+    .social-media {
+        display: none;
+    }
+
+    .navbar {
+        display: non;
+    }
+
+    nav {
+        flex-direction: column;
+        background: grey;
+        align-items: flex-start;
+    }
+
+    nav ul li,
+    nav ul li a {
+        display: flex;
+        flex-direction: column;
+        background: none;
+        font-weight: normal;
+        color: black;
+    }
+
+    .logo {
+        font-size: 50px;
+    }
+
+    .main-grid {
+        margin-top: px;
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 1rem;        
+    }
 }
